fixed mobile alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -225,6 +225,7 @@ footer {
     .navbar-default.affix .nav>li>a:focus:hover {
         color: #9c27b0;
     }
+
 }
 
 header {
@@ -320,10 +321,6 @@ header .header-content .inner p {
 		display: table;
 }
 
-.multi-list-header {
-	  margin-left: 12em;
-}
-
 .multi-list {
 		padding: 0;
 	  list-style-type: none;
@@ -334,7 +331,17 @@ footer {
     background-color:#2d2d2d;
 }
 
+@media(min-width:384px) {
+		.multi-list-header {
+				margin-left: 2em;
+		}
+}
+
 @media(min-width:768px) {
+		.multi-list-header {
+				margin-left: 12em;
+		}
+
     .icon-lg {
         font-size: 80px;
     }
